feat(Primeiro Deploy): Site preparado para ser aprensentado sua versão 1.0.0

--- a/public/style.css
+++ b/public/style.css
@@ -67,7 +67,7 @@ input[type=checkbox] {
   }
   
   .banner-1 {
-    background-image: url(https://img.freepik.com/fotos-premium/fundo-abstrato-de-tecnologia-digital_7247-1828.jpg);
+    background-image: url(assets/banner.png);
   }
   
   .banners {
